--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-14T16:45:37Z</date>
+						<date>2019-05-15T21:06:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -64,21 +64,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-0c90353-700x375.jpg</key>
 							<dict>
@@ -149,6 +149,16 @@
 								</data>
 								<key>Size</key>
 								<integer>154438</integer>
+							</dict>
+							<key>files/stacks-image-a22b399.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								dATUOxO9MyMP
+								y4nskMvcBw==
+								</data>
+								<key>Size</key>
+								<integer>337174</integer>
 							</dict>
 							<key>files/stacks-image-ae82c9c.jpg</key>
 							<dict>
@@ -274,11 +284,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kk7r13VDavOj
-								XwtLU0J/OQ==
+								JfK8BsYhZwgk
+								Wvvw75BnrA==
 								</data>
 								<key>Size</key>
-								<integer>135549</integer>
+								<integer>135770</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
