--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-15T20:18:42Z</date>
+						<date>2019-05-16T16:07:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -574,11 +574,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pqvGknVYioZg
-								VPWSEoGOHw==
+								Is5R3k0k20i4
+								cAvJKCuNaQ==
 								</data>
 								<key>Size</key>
-								<integer>920125</integer>
+								<integer>920134</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
