lightning talk abstract update netsci

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-17T20:58:16Z</date>
+						<date>2019-05-17T23:43:08Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -574,11 +574,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								R0P3Q2S1fCDD
-								FpHPQEh0wg==
+								PirFDaeaUaCg
+								Yl/jeOZVOg==
 								</data>
 								<key>Size</key>
-								<integer>894985</integer>
+								<integer>895735</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
