--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -3904,7 +3904,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:55Z</date>
+						<date>2019-05-19T16:43:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3928,6 +3928,16 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-076c5e3-1200x800.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZjPQfWHhNWqA
+								YVNuTf0Grw==
+								</data>
+								<key>Size</key>
+								<integer>289677</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
@@ -3969,6 +3979,16 @@
 								<key>Size</key>
 								<integer>223202</integer>
 							</dict>
+							<key>files/stacks-image-238bd39-1200x800.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JAJh+cX1oHF8
+								oXUmvF1COA==
+								</data>
+								<key>Size</key>
+								<integer>117009</integer>
+							</dict>
 							<key>files/stacks-image-26e99bd-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3978,6 +3998,16 @@
 								</data>
 								<key>Size</key>
 								<integer>92633</integer>
+							</dict>
+							<key>files/stacks-image-3e863c5-1200x800.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZA17o3KD8baV
+								ZqZEpdDj1A==
+								</data>
+								<key>Size</key>
+								<integer>204638</integer>
 							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
@@ -3998,6 +4028,16 @@
 								</data>
 								<key>Size</key>
 								<integer>336849</integer>
+							</dict>
+							<key>files/stacks-image-779681d-1200x800.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5eJqe1Qr90QF
+								x1UlcSR51g==
+								</data>
+								<key>Size</key>
+								<integer>154790</integer>
 							</dict>
 							<key>files/stacks-image-79c18a1-300x218.png</key>
 							<dict>
@@ -4063,11 +4103,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zRU/Eo79kOO+
-								T2U+HyUj3w==
+								Q1wK6ycFz5H0
+								zrx9Fxk4bg==
 								</data>
 								<key>Size</key>
-								<integer>110162</integer>
+								<integer>113938</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -4083,11 +4123,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pr7ZGTnsRZhc
-								9PQ7kcYBPA==
+								cE43I3n0mCwv
+								04657ssBZA==
 								</data>
 								<key>Size</key>
-								<integer>54456</integer>
+								<integer>62061</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6170,7 +6210,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:56Z</date>
+						<date>2019-05-19T16:43:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6254,16 +6294,6 @@
 								</data>
 								<key>Size</key>
 								<integer>223202</integer>
-							</dict>
-							<key>files/stacks-image-24a754b-250x254.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								Of8NbQu10Bep
-								xBQoyVJ0wQ==
-								</data>
-								<key>Size</key>
-								<integer>86631</integer>
 							</dict>
 							<key>files/stacks-image-2d02c4e-1200x284.jpg</key>
 							<dict>
@@ -6439,11 +6469,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tqsyf1dfASY2
-								pIJ1y809bg==
+								jiLv6+n1/qgI
+								QAKREyWQyA==
 								</data>
 								<key>Size</key>
-								<integer>143430</integer>
+								<integer>154890</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -6459,11 +6489,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bVRPEmDTowGf
-								cDVHGFtUFA==
+								fVb8kr14ckYN
+								4PfCUTJrkA==
 								</data>
 								<key>Size</key>
-								<integer>100843</integer>
+								<integer>116064</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14770,7 +14800,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-17T23:43:08Z</date>
+						<date>2019-05-19T16:43:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14799,11 +14829,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7lLZ6PfKx8OF
-								ocEx83puGw==
+								pQFnt5/xWWce
+								N3T/GYZsGg==
 								</data>
 								<key>Size</key>
-								<integer>5537</integer>
+								<integer>5601</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14882,7 +14912,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-17T23:43:08Z</date>
+						<date>2019-05-19T16:43:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15921,11 +15951,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8OpNavbDtePD
-								T+JGs24rVA==
+								Xzu+NkR0oXAj
+								KmrQOoRphA==
 								</data>
 								<key>Size</key>
-								<integer>3785</integer>
+								<integer>4636</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -16069,7 +16099,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFHv0gkgCiADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFI346tYheADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16079,14 +16109,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUe/SCSB
-				AoAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUjfjq2X
+				JIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBR79IJIE0
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBSN+OrZdo
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16096,7 +16126,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBR79IJIFegAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBSN+OrZeagAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16106,7 +16136,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBR79IJIGIgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBSN+OrZfEgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
