--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:56Z</date>
+						<date>2019-05-19T16:43:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -117,16 +117,6 @@
 								</data>
 								<key>Size</key>
 								<integer>223202</integer>
-							</dict>
-							<key>files/stacks-image-24a754b-250x254.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								Of8NbQu10Bep
-								xBQoyVJ0wQ==
-								</data>
-								<key>Size</key>
-								<integer>86631</integer>
 							</dict>
 							<key>files/stacks-image-2d02c4e-1200x284.jpg</key>
 							<dict>
@@ -302,11 +292,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tqsyf1dfASY2
-								pIJ1y809bg==
+								jiLv6+n1/qgI
+								QAKREyWQyA==
 								</data>
 								<key>Size</key>
-								<integer>143430</integer>
+								<integer>154890</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -322,11 +312,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bVRPEmDTowGf
-								cDVHGFtUFA==
+								fVb8kr14ckYN
+								4PfCUTJrkA==
 								</data>
 								<key>Size</key>
-								<integer>100843</integer>
+								<integer>116064</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
