--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-20T14:56:44Z</date>
+						<date>2019-05-20T15:03:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AFcjoUGsIzUD
-								tlp53EYFmA==
+								vg9SvEn2Li9B
+								c1wwTckMMA==
 								</data>
 								<key>Size</key>
-								<integer>801425</integer>
+								<integer>801507</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
